<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

	<modelVersion>4.0.0</modelVersion>

	<parent>
		<groupId>com.qcadoo.maven</groupId>
		<artifactId>qcadoo-super-pom</artifactId>
		<version>0.0.1</version>
	</parent>

	<groupId>com.qcadoo</groupId>
	<artifactId>qcadoo</artifactId>
	<version>1.5-SNAPSHOT</version>
	<packaging>pom</packaging>

	<modules>
		<module>qcadoo-tenant</module>
		<module>qcadoo-plugin</module>
		<module>qcadoo-localization</module>
		<module>qcadoo-security</module>
		<module>qcadoo-model</module>
		<module>qcadoo-view</module>
		<module>qcadoo-report</module>
		<module>qcadoo-plugin-archetype</module>
		<module>qcadoo-schema</module>
		<module>qcadoo-javadoc</module>
		<module>qcadoo-plugins-plugin-management</module>
		<module>qcadoo-plugins-user-management</module>
		<module>qcadoo-plugins-dictionary-management</module>
		<module>qcadoo-plugins-menu-management</module>
		<module>qcadoo-plugins-export</module>
		<module>qcadoo-mail</module>
		<module>qcadoo-custom-translation</module>
		<module>qcadoo-plugins-custom-translation-management</module>
		<module>qcadoo-plugins-unit-conversion-management</module>
		<module>qcadoo-commons</module>
		<module>qcadoo-testing</module>
		<module>qcadoo-swagger</module>
	</modules>

	<name>Qcadoo Framework</name>

	<description />


	<url>https://github.com/qcadoo/qcadoo</url>

	<organization>
		<name>Qcadoo Limited</name>
		<url>http://www.qcadoo.com/</url>
	</organization>

	<inceptionYear>2010</inceptionYear>

	<licenses>
		<license>
			<name>GNU Affero General Public License</name>
			<url>https://github.com/qcadoo/qcadoo/raw/master/licence.txt</url>
		</license>
	</licenses>

	<properties>
		<qcadoo.plugin.version>1.5</qcadoo.plugin.version>
		<qcadoo.maven.plugin.version>1.5-SNAPSHOT</qcadoo.maven.plugin.version>
	</properties>

	<dependencies>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-aop</artifactId>
			<version>${spring.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-beans</artifactId>
			<version>${spring.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-context</artifactId>
			<version>${spring.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-context-support</artifactId>
			<version>${spring.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-expression</artifactId>
			<version>${spring.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-orm</artifactId>
			<version>${spring.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-tx</artifactId>
			<version>${spring.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-web</artifactId>
			<version>${spring.version}</version>
			<exclusions>
				<exclusion>
					<groupId>rome</groupId>
					<artifactId>rome</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-webmvc</artifactId>
			<version>${spring.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework.security</groupId>
			<artifactId>spring-security-core</artifactId>
			<version>${spring.security.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework.security</groupId>
			<artifactId>spring-security-crypto</artifactId>
			<version>${spring.security.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework.security</groupId>
			<artifactId>spring-security-config</artifactId>
			<version>${spring.security.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework.security</groupId>
			<artifactId>spring-security-web</artifactId>
			<version>${spring.security.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework.security</groupId>
			<artifactId>spring-security-taglibs</artifactId>
			<version>${spring.security.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework.security</groupId>
			<artifactId>spring-security-aspects</artifactId>
			<version>${spring.security.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-aspects</artifactId>
			<version>${spring.version}</version>
			<exclusions>
				<exclusion>
					<groupId>org.aspectj</groupId>
					<artifactId>aspectjweaver</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>org.aspectj</groupId>
			<artifactId>aspectjweaver</artifactId>
			<version>${aspectj.version}</version>
		</dependency>
		<dependency>
			<groupId>org.hibernate</groupId>
			<artifactId>hibernate-core</artifactId>
			<version>${hibernate.version}</version>
		</dependency>
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-lang3</artifactId>
			<version>3.3.2</version>
		</dependency>
		<dependency>
			<groupId>commons-beanutils</groupId>
			<artifactId>commons-beanutils</artifactId>
			<version>1.9.1</version>
		</dependency>
		<dependency>
			<groupId>commons-codec</groupId>
			<artifactId>commons-codec</artifactId>
			<version>1.9</version>
		</dependency>
		<dependency>
			<groupId>commons-io</groupId>
			<artifactId>commons-io</artifactId>
			<version>2.4</version>
		</dependency>
		<dependency>
			<groupId>commons-validator</groupId>
			<artifactId>commons-validator</artifactId>
			<version>1.5.1</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-test</artifactId>
			<version>${spring.version}</version>
		</dependency>
		<dependency>
			<groupId>hsqldb</groupId>
			<artifactId>hsqldb</artifactId>
			<version>1.8.0.10</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>commons-dbcp</groupId>
			<artifactId>commons-dbcp</artifactId>
			<version>1.4</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>xmlunit</groupId>
			<artifactId>xmlunit</artifactId>
			<version>1.3</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.javassist</groupId>
			<artifactId>javassist</artifactId>
			<version>3.18.1-GA</version>
		</dependency>
		<dependency>
			<groupId>org.quartz-scheduler</groupId>
			<artifactId>quartz</artifactId>
			<version>1.8.5</version>
		</dependency>
		<dependency>
			<groupId>org.aspectj</groupId>
			<artifactId>aspectjrt</artifactId>
			<version>1.9.21.2</version>
		</dependency>
                <dependency>
                        <groupId>javax.annotation</groupId>
                        <artifactId>javax.annotation-api</artifactId>
                        <version>1.3.2</version>
                </dependency>
                <dependency>
                        <groupId>com.sun.activation</groupId>
                        <artifactId>jakarta.activation</artifactId>
                        <version>1.2.2</version>
                </dependency>
		<dependency>
			<groupId>org.owasp.esapi</groupId>
                        <artifactId>esapi</artifactId>
                        <version>2.5.1.0</version>
                        <exclusions>
                                <exclusion><groupId>xerces</groupId><artifactId>xercesImpl</artifactId></exclusion>
                                <exclusion><groupId>xom</groupId><artifactId>xom</artifactId></exclusion>
                                <exclusion><groupId>org.apache.xmlgraphics</groupId><artifactId>batik-css</artifactId></exclusion>
                                <exclusion><groupId>net.sourceforge.htmlunit</groupId><artifactId>neko-htmlunit</artifactId></exclusion>
                                <exclusion><groupId>xml-apis</groupId><artifactId>xml-apis</artifactId></exclusion>
                                <exclusion><groupId>xml-apis</groupId><artifactId>xml-apis-ext</artifactId></exclusion>
                        </exclusions>
		</dependency>
	</dependencies>
        <dependencyManagement>
                <dependencies>
                        <dependency>
                                <groupId>xml-apis</groupId>
                                <artifactId>xml-apis</artifactId>
                                <version>1.4.01</version>
                                <scope>provided</scope>
                        </dependency>
                        <dependency>
                                <groupId>xml-apis</groupId>
                                <artifactId>xml-apis</artifactId>
                                <version>1.3.04</version>
                                <scope>provided</scope>
                        </dependency>
                        <dependency>
                                <groupId>xml-apis</groupId>
                                <artifactId>xml-apis-ext</artifactId>
                                <version>1.3.04</version>
                                <scope>provided</scope>
                        </dependency>
                        <dependency>
                                <groupId>stax</groupId>
                                <artifactId>stax-api</artifactId>
                                <version>1.0.1</version>
                                <scope>provided</scope>
                        </dependency>
                </dependencies>
        </dependencyManagement>

	<build>
		<plugins>
			<plugin>
				<groupId>dev.aspectj</groupId>
				<artifactId>aspectj-maven-plugin</artifactId>
				<version>1.14.1</version>
				<configuration>
					<complianceLevel>21</complianceLevel>
                                        <Xlint>ignore</Xlint>
                                        <compilerArgs>
                                                <arg>--add-reads</arg>
                                                <arg>java.xml=ALL-UNNAMED</arg>
                                        </compilerArgs>
					<source>21</source>
					<target>21</target>
					<aspectLibraries>
						<aspectLibrary>
							<groupId>org.springframework</groupId>
							<artifactId>spring-aspects</artifactId>
						</aspectLibrary>
						<aspectLibrary>
							<groupId>org.springframework.security</groupId>
							<artifactId>spring-security-aspects</artifactId>
						</aspectLibrary>
					</aspectLibraries>
					<showWeaveInfo>true</showWeaveInfo>
				</configuration>
				<dependencies>
					<dependency>
						<groupId>org.aspectj</groupId>
						<artifactId>aspectjtools</artifactId>
						<version>1.9.21.2</version>
					</dependency>
				</dependencies>
				<executions>
					<execution>
						<goals>
							<goal>compile</goal>
							<goal>test-compile</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
                        <plugin>
                                <groupId>org.apache.maven.plugins</groupId>
                                <artifactId>maven-compiler-plugin</artifactId>
                                <version>3.11.0</version>
                                <configuration>
                                        <source>21</source>
                                        <target>21</target>
                                        <compilerArgs>
                                                <arg>--add-reads</arg>
                                                <arg>java.xml=ALL-UNNAMED</arg>
                                        </compilerArgs>
                                </configuration>
                        </plugin>
		</plugins>
	</build>

	<distributionManagement>
		<repository>
			<id>qcadoo-releases-repository</id>
			<url>https://nexus.qcadoo.org/content/repositories/releases</url>
		</repository>
		<snapshotRepository>
			<id>qcadoo-snapshots-repository</id>
			<url>https://nexus.qcadoo.org/content/repositories/snapshots</url>
			<uniqueVersion>false</uniqueVersion>
		</snapshotRepository>
	</distributionManagement>

	<scm>
		<connection>scm:git:ssh://github.com/qcadoo/qcadoo.git</connection>
		<developerConnection>scm:git:ssh://git@github.com/qcadoo/qcadoo.git</developerConnection>
		<url>http://github.com/qcadoo/qcadoo</url>
	  <tag>HEAD</tag>
  </scm>

</project>
